[package]
name = "file-upload-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = {version="4.4.0", features =[ "derive"]}
native-dialog = "0.6.4"
calamine = "0.21.2"
serde = {version="1.0.188", features = ["derive"]}
